prod_snapshot_2015-09-24_1030/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Goal_Self_Service__c</fullName>
        <label>Goal - Self Service</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Goal_Sell_Products__c</fullName>
        <label>Goal - Sell Products</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Google_Places__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Google Places?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_30_Second__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has 30 Second</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Activity__c</fullName>
        <formula>IF(LastActivityDate &gt; DATE(1900,1,1),&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Activity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Duplicate_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Duplicate Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_First_Appoint__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has First Appoint</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Score__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Score</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>High_Income_Exec__c</fullName>
        <label>High Income Exec</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hot_Seasons__c</fullName>
        <label>Hot Seasons</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__HubSpot_Intelligence__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HubSpot Intelligence</label>
        <referenceTo>HubSpot_Inc__HubSpot_Intelligence__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Stage_Since__c</fullName>
        <label>In Stage Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inbound_Lead_Source__c</fullName>
        <label>Inbound Lead Source</label>
        <picklist>
            <picklistValues>
                <fullName>Word of Mouth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Television</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Blast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospecting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BlogGL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LinkedIn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tega</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Republic Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZCentral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MediaTraks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twitter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BuyerZone</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Industry_AffiliatedMarkets__c</fullName>
        <inlineHelpText>Help Text</inlineHelpText>
        <label>Industry General</label>
        <picklist>
            <picklistValues>
                <fullName>Automotive Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repair Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales/Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Industry_Specific__c</fullName>
        <label>Industry Specific</label>
        <picklist>
            <controllingField>Industry_AffiliatedMarkets__c</controllingField>
            <picklistValues>
                <fullName>Aerospace/Defense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apartments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assisted Living</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bankruptcy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cleaning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clothing/Apparel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College/Trade Schools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collegiate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consignment/Pawn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cosmetic Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Criminal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day Care/Pre-School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dental Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elementary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy/Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fitness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flooring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funeral Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Furniture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heavy Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High School</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>InfoUSA_Employee_Code__c</fullName>
        <label>InfoUSA Employee Code</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>InfoUSA_Employee_Count__c</fullName>
        <label>InfoUSA Employee Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InfoUSA_Employee_Range__c</fullName>
        <label>InfoUSA Employee Range</label>
        <picklist>
            <picklistValues>
                <fullName>1 TO 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 TO 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 TO 19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20 TO 49</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50 TO 99</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100 TO 249</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>250 TO 499</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>500 TO 999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1,000 TO 4,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5,000 TO 9,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10,000+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>InfoUSA_SIC_Code__c</fullName>
        <label>InfoUSA SIC Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InfoUSA_Sales_Volume_Code__c</fullName>
        <label>InfoUSA Sales Volume Code</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>InfoUSA_Sales_Volume__c</fullName>
        <label>InfoUSA Sales Volume Range</label>
        <picklist>
            <picklistValues>
                <fullName>OVER $1 BILLION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$500M - $1 BILLION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$100-500 MILLION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$50-100 MILLION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$20-50 MILLION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$10-20 MILLION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$5-10 MILLION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$2.5-5 MILLION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$1-2.5 MILLION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$500,000-1 MILLION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LESS THAN $500,000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Integrated_SF_ID__c</fullName>
        <description>Duplicate USCP Record Id for Lead (if any) populated by Jitterbit</description>
        <label>Integrated SF ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest_Level__c</fullName>
        <label>Interest Level</label>
        <picklist>
            <picklistValues>
                <fullName>Yes – Immediately</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes – Within 90 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes – In more than 90 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No – Just researching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No – Current GannettLocal customer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Responsive_Design_Desired__c</fullName>
        <label>Is Responsive Design Desired</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_There_A_Logo__c</fullName>
        <label>Is There A Logo</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Act_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Act Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Datetime__c</fullName>
        <description>The datetime of the most recently added Activity.</description>
        <label>Last Activity Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Ad_Run__c</fullName>
        <label>Last Ad Run</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Call_Date__c</fullName>
        <inlineHelpText>Call Dialer last call date</inlineHelpText>
        <label>Last Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Connected_Call_Date__c</fullName>
        <inlineHelpText>Call Dialer last call date where minutes &gt;0</inlineHelpText>
        <label>Last Connected Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Created_Activity_Date__c</fullName>
        <label>Last Created Activity Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Product_Purchased__c</fullName>
        <label>Last Product Purchased</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Touch_Age__c</fullName>
        <description>TODAY() - DATEVALUE(Last_Touch_Date__c)</description>
        <formula>TODAY() - Last_Touch_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Touch Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Touch_Date__c</fullName>
        <formula>IF(LastActivityDate &gt;  DATEVALUE(LastModifiedDate) , LastActivityDate, DATEVALUE(LastModifiedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Touch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LeadDefinition__c</fullName>
        <label>Lead Definition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Call_Volume_Bucket__c</fullName>
        <formula>CASE( Call_Count__c ,
0,&quot;NONE&quot;,
1,&quot;LOW&quot;,
2,&quot;LOW&quot;,
3,&quot;LOW&quot;,
4,&quot;LOW&quot;,
5,&quot;LOW&quot;,
6,&quot;MEDIUM&quot;,
7,&quot;MEDIUM&quot;,
8,&quot;MEDIUM&quot;,
9,&quot;MEDIUM&quot;,&quot;HIGH&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Call Volume Bucket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Level__c</fullName>
        <label>Lead Level</label>
        <picklist>
            <picklistValues>
                <fullName>L0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Number__c</fullName>
        <label>Lead Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Check__c</fullName>
        <formula>IF (  Lead_Owner__r.LastName = &quot;&quot;, 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Owner Check</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Id__c</fullName>
        <formula>Lead_Owner__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Owner Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Name__c</fullName>
        <formula>Lead_Owner__r.FirstName &amp; &quot; &quot; &amp;  Lead_Owner__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Role__c</fullName>
        <formula>Lead_Owner__r.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Status_del__c</fullName>
        <formula>IF(Lead_Owner__r.IsActive=True,&quot;Active&quot;,&quot;InActive&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Owner Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Score_Value__c</fullName>
        <formula>If( Lead_Score__c &gt;=19, &quot;A&quot;, If(Lead_Score__c&gt;=17,&quot;B&quot;, If(Lead_Score__c &gt;=15, &quot;C&quot;,&quot;F&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Score Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Score__c</fullName>
        <label>Lead Score Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Scoring__c</fullName>
        <formula>If(OR(CONTAINS(&quot;5712,5713,8082,8063,7231,7241, 5944, 5947, 5948&quot;,InfoUSA_SIC_Code__c),CONTAINS(&quot;52,80,72,56&quot;,MID(InfoUSA_SIC_Code__c,1,2))),
CASE( Ad_Spend_Code__c ,&quot;A&quot;,6,&quot;B&quot;,8,&quot;C&quot;,8,&quot;D&quot;,6,&quot;E&quot;,10, 4)*0.25 +
CASE( Ad_Size_Code__c  ,&quot;A&quot;,5,&quot;B&quot;,7,&quot;C&quot;,8,&quot;D&quot;,10,0)*0.20 +
CASE(  InfoUSA_Sales_Volume_Code__c ,&quot;A&quot;,3,&quot;B&quot;,7,&quot;C&quot;,10,&quot;D&quot;,8,&quot;E&quot;,6, 5)*0.10+
CASE( InfoUSA_Employee_Code__c  ,&quot;A&quot;,2,&quot;B&quot;,3,&quot;C&quot;,6,&quot;D&quot;,4,3)*0.05+
IF(ISNULL(Last_Product_Purchased__c) ,0,10)*0.25+
CASE(  Actual_Year_Started__c   ,&quot;2009&quot;,10,&quot;2008&quot;,8,&quot;2007&quot;,5,&quot;2006&quot;,4,&quot;2005&quot;,4,3)*0.10+
CASE(  Credit_Score_Code__c   ,&quot;A+&quot;,10,&quot;A&quot;,10,&quot;B&quot;,8,&quot;B+&quot;,8,&quot;C+&quot;,6,&quot;C&quot;,4,&quot;I&quot;,10,&quot;P&quot;,10,2)*0.05,
IF(OR(CONTAINS(&quot;7342,5075,781,7699&quot;,InfoUSA_SIC_Code__c), MID(InfoUSA_SIC_Code__c,1,2)=&quot;17&quot;),
CASE( Ad_Spend_Code__c ,&quot;A&quot;,6,&quot;B&quot;,8,&quot;C&quot;,8,&quot;D&quot;,6,&quot;E&quot;,10, 4)*0.25 +
CASE( Ad_Size_Code__c  ,&quot;A&quot;,5,&quot;B&quot;,7,&quot;C&quot;,8,&quot;D&quot;,10,0)*0.13 +
CASE(  InfoUSA_Sales_Volume_Code__c ,&quot;A&quot;,3,&quot;B&quot;,7,&quot;C&quot;,10,&quot;D&quot;,8,&quot;E&quot;,6, 5)*0.15+
CASE( InfoUSA_Employee_Code__c  ,&quot;A&quot;,2,&quot;B&quot;,3,&quot;C&quot;,6,&quot;D&quot;,4,3)*0.08+
IF(ISNULL(Last_Product_Purchased__c) ,0,10)*0.25+
CASE(  Actual_Year_Started__c   ,&quot;2009&quot;,10,&quot;2008&quot;,8,&quot;2007&quot;,5,&quot;2006&quot;,4,&quot;2005&quot;,4,3)*0.10+
CASE(  Credit_Score_Code__c   ,&quot;A+&quot;,10,&quot;A&quot;,10,&quot;B&quot;,8,&quot;B+&quot;,8,&quot;C+&quot;,6,&quot;C&quot;,4,&quot;I&quot;,10,&quot;P&quot;,10,2)*0.05
 ,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Scoring</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail_Text__c</fullName>
        <inlineHelpText>Used by admins to describe the Lead Source in greater detail.</inlineHelpText>
        <label>Lead Source Detail Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail__c</fullName>
        <inlineHelpText>Select A Named Instance of the Above Selected Lead Source</inlineHelpText>
        <label>Lead Source Detail</label>
        <picklist>
            <controllingField>LeadSource</controllingField>
            <picklistValues>
                <fullName>adWords</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Better Business Bureau</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CitySearchBPL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D&amp;B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domain Tools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Valley Tribune</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FindLaw.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hubspot-ContactUs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hubspot-DigitalAudit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infogroup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InfoUSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jigsaw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Justia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lawyers.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NewTimesBPL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NIR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PhoenixMagBPL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radius</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scorpion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Magic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TeleMatch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellowpages.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YellowPagesBPL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YelpBPL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yodle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staples Call Request</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>